--- a/package.json
+++ b/package.json
@@ -9,22 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.22",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.12.0",
     "@reduxjs/toolkit": "^2.8.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "formidable": "^3.5.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.534.0",
     "mongodb": "^6.18.0",
     "next": "15.4.4",
     "next-connect": "^1.0.0",
     "nodemailer": "^7.0.5",
     "nookies": "^2.5.2",
+    "openai": "^5.10.2",
+    "pdf-parse": "^1.1.1",
+    "pdf-parser": "^1.0.5",
+    "pdfjs-dist": "^5.4.54",
     "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
+    "react-pdftotext": "^1.3.4",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
